# CRISPR-studio

./: .gitignore  =2  =6.3.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  app_api.py  codex_prompts.md  codex_prompts_multilang.md  docker-compose.yml  overview.md  prompt02_plan.md  prompts.md  pyproject.toml  setup.cfg  test_manual.R  test_manual.report.Rmd
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: dark-theme.css
benchmarks/: README.md
benchmarks/data/: .gitignore
cpp/: CMakeLists.txt
cpp/src/: module.cpp
docs/: beta_feedback_plan.md  data_contract.md  demo_runbook.md  developer_guide.md  go_to_market.md  marketing_assets.md  native_architecture_plan.md  notebooks.md  overview.md  performance.md  roadmap.md  security_privacy.md  troubleshooting.md  user_guide.md
docs/reference/mageck/: README.md  generate_report.R  report_template.Rmd
docs/runbooks/: operations.md
examples/: api_client.py
notebooks/: quickstart.ipynb
resources/enrichment/: native_demo.json
resources/sample_report/: sample_report.html
rust/: Cargo.toml
rust/src/: lib.rs
sample_data/: demo_counts.csv  demo_library.csv  demo_metadata.json
scripts/: __init__.py  benchmark_pipeline.py  build_report.py  export_openapi.py  generate_demo_dataset.py  profile_native.sh  profile_python.sh  validate_dataset.py
src/crispr_screen_expert/: __init__.py  analytics.py  annotations.py  api.py  background.py  cli.py  config.py  data_loader.py  enrichment.py  exceptions.py  logging_config.py  mageck_adapter.py  models.py  narrative.py  normalization.py  pipeline.py  qc.py  reporting.py  results.py  rra.py  visualization.py
src/crispr_screen_expert/app/: __init__.py  callbacks.py  constants.py  ids.py  layout.py  state.py
src/crispr_screen_expert/native/: __init__.py  enrichment.py  rra.py
templates/: report.html
templates/data_contract/: counts_template.csv  library_template.csv  metadata_template.json
tests/: conftest.py  test_annotations.py  test_api.py  test_api_client_example.py  test_cli_snapshots.py  test_dash_integration.py  test_data_loader.py  test_job_manager.py  test_native_enrichment.py  test_native_rra.py  test_normalization.py  test_notebooks.py  test_pipeline_demo.py  test_pipeline_reliability.py  test_qc.py  test_reporting.py  test_rra.py  test_validate_dataset_script.py
tests/snapshots/: cli_mageck_off.txt  cli_mageck_on.txt  report_basic_normalized.txt
